fixed buttons overlaping on the carousel

--- a/src/styles/partials/Pages/_webapp.scss
+++ b/src/styles/partials/Pages/_webapp.scss
@@ -60,7 +60,7 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
-        .carousel .control-arrow, .carousel.carousel-slider .control-arrow {
+        .carousel {
             z-index: 0;
         }
     }
